libqt6c/src/libqpushbutton.hpp

#pragma once
#ifndef SRCC_LIBQPUSHBUTTON_HPP
#define SRCC_LIBQPUSHBUTTON_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QAbstractButton QAbstractButton;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMenu QMenu;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QPushButton QPushButton;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionButton QStyleOptionButton;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
#endif

QPushButton* QPushButton_new(QWidget* parent);
QPushButton* QPushButton_new2();
QPushButton* QPushButton_new3(const libqt_string text);
QPushButton* QPushButton_new4(const QIcon* icon, const libqt_string text);
QPushButton* QPushButton_new5(const libqt_string text, QWidget* parent);
QPushButton* QPushButton_new6(const QIcon* icon, const libqt_string text, QWidget* parent);
QMetaObject* QPushButton_MetaObject(const QPushButton* self);
void* QPushButton_Metacast(QPushButton* self, const char* param1);
int QPushButton_Metacall(QPushButton* self, int param1, int param2, void** param3);
QSize* QPushButton_SizeHint(const QPushButton* self);
QSize* QPushButton_MinimumSizeHint(const QPushButton* self);
bool QPushButton_AutoDefault(const QPushButton* self);
void QPushButton_SetAutoDefault(QPushButton* self, bool autoDefault);
bool QPushButton_IsDefault(const QPushButton* self);
void QPushButton_SetDefault(QPushButton* self, bool defaultVal);
void QPushButton_SetMenu(QPushButton* self, QMenu* menu);
QMenu* QPushButton_Menu(const QPushButton* self);
void QPushButton_SetFlat(QPushButton* self, bool flat);
bool QPushButton_IsFlat(const QPushButton* self);
void QPushButton_ShowMenu(QPushButton* self);
bool QPushButton_Event(QPushButton* self, QEvent* e);
void QPushButton_PaintEvent(QPushButton* self, QPaintEvent* param1);
void QPushButton_KeyPressEvent(QPushButton* self, QKeyEvent* param1);
void QPushButton_FocusInEvent(QPushButton* self, QFocusEvent* param1);
void QPushButton_FocusOutEvent(QPushButton* self, QFocusEvent* param1);
void QPushButton_MouseMoveEvent(QPushButton* self, QMouseEvent* param1);
void QPushButton_InitStyleOption(const QPushButton* self, QStyleOptionButton* option);
bool QPushButton_HitButton(const QPushButton* self, const QPoint* pos);
void QPushButton_OnMetaObject(const QPushButton* self, intptr_t slot);
QMetaObject* QPushButton_SuperMetaObject(const QPushButton* self);
void QPushButton_OnMetacast(QPushButton* self, intptr_t slot);
void* QPushButton_SuperMetacast(QPushButton* self, const char* param1);
void QPushButton_OnMetacall(QPushButton* self, intptr_t slot);
int QPushButton_SuperMetacall(QPushButton* self, int param1, int param2, void** param3);
void QPushButton_OnSizeHint(const QPushButton* self, intptr_t slot);
QSize* QPushButton_SuperSizeHint(const QPushButton* self);
void QPushButton_OnMinimumSizeHint(const QPushButton* self, intptr_t slot);
QSize* QPushButton_SuperMinimumSizeHint(const QPushButton* self);
void QPushButton_OnEvent(QPushButton* self, intptr_t slot);
bool QPushButton_SuperEvent(QPushButton* self, QEvent* e);
void QPushButton_OnPaintEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperPaintEvent(QPushButton* self, QPaintEvent* param1);
void QPushButton_OnKeyPressEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperKeyPressEvent(QPushButton* self, QKeyEvent* param1);
void QPushButton_OnFocusInEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperFocusInEvent(QPushButton* self, QFocusEvent* param1);
void QPushButton_OnFocusOutEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperFocusOutEvent(QPushButton* self, QFocusEvent* param1);
void QPushButton_OnMouseMoveEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperMouseMoveEvent(QPushButton* self, QMouseEvent* param1);
void QPushButton_OnInitStyleOption(const QPushButton* self, intptr_t slot);
void QPushButton_SuperInitStyleOption(const QPushButton* self, QStyleOptionButton* option);
void QPushButton_OnHitButton(const QPushButton* self, intptr_t slot);
bool QPushButton_SuperHitButton(const QPushButton* self, const QPoint* pos);
void QPushButton_CheckStateSet(QPushButton* self);
void QPushButton_OnCheckStateSet(QPushButton* self, intptr_t slot);
void QPushButton_SuperCheckStateSet(QPushButton* self);
void QPushButton_NextCheckState(QPushButton* self);
void QPushButton_OnNextCheckState(QPushButton* self, intptr_t slot);
void QPushButton_SuperNextCheckState(QPushButton* self);
void QPushButton_KeyReleaseEvent(QPushButton* self, QKeyEvent* e);
void QPushButton_OnKeyReleaseEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperKeyReleaseEvent(QPushButton* self, QKeyEvent* e);
void QPushButton_MousePressEvent(QPushButton* self, QMouseEvent* e);
void QPushButton_OnMousePressEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperMousePressEvent(QPushButton* self, QMouseEvent* e);
void QPushButton_MouseReleaseEvent(QPushButton* self, QMouseEvent* e);
void QPushButton_OnMouseReleaseEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperMouseReleaseEvent(QPushButton* self, QMouseEvent* e);
void QPushButton_ChangeEvent(QPushButton* self, QEvent* e);
void QPushButton_OnChangeEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperChangeEvent(QPushButton* self, QEvent* e);
void QPushButton_TimerEvent(QPushButton* self, QTimerEvent* e);
void QPushButton_OnTimerEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperTimerEvent(QPushButton* self, QTimerEvent* e);
int QPushButton_DevType(const QPushButton* self);
void QPushButton_OnDevType(const QPushButton* self, intptr_t slot);
int QPushButton_SuperDevType(const QPushButton* self);
void QPushButton_SetVisible(QPushButton* self, bool visible);
void QPushButton_OnSetVisible(QPushButton* self, intptr_t slot);
void QPushButton_SuperSetVisible(QPushButton* self, bool visible);
int QPushButton_HeightForWidth(const QPushButton* self, int param1);
void QPushButton_OnHeightForWidth(const QPushButton* self, intptr_t slot);
int QPushButton_SuperHeightForWidth(const QPushButton* self, int param1);
bool QPushButton_HasHeightForWidth(const QPushButton* self);
void QPushButton_OnHasHeightForWidth(const QPushButton* self, intptr_t slot);
bool QPushButton_SuperHasHeightForWidth(const QPushButton* self);
QPaintEngine* QPushButton_PaintEngine(const QPushButton* self);
void QPushButton_OnPaintEngine(const QPushButton* self, intptr_t slot);
QPaintEngine* QPushButton_SuperPaintEngine(const QPushButton* self);
void QPushButton_MouseDoubleClickEvent(QPushButton* self, QMouseEvent* event);
void QPushButton_OnMouseDoubleClickEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperMouseDoubleClickEvent(QPushButton* self, QMouseEvent* event);
void QPushButton_WheelEvent(QPushButton* self, QWheelEvent* event);
void QPushButton_OnWheelEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperWheelEvent(QPushButton* self, QWheelEvent* event);
void QPushButton_EnterEvent(QPushButton* self, QEnterEvent* event);
void QPushButton_OnEnterEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperEnterEvent(QPushButton* self, QEnterEvent* event);
void QPushButton_LeaveEvent(QPushButton* self, QEvent* event);
void QPushButton_OnLeaveEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperLeaveEvent(QPushButton* self, QEvent* event);
void QPushButton_MoveEvent(QPushButton* self, QMoveEvent* event);
void QPushButton_OnMoveEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperMoveEvent(QPushButton* self, QMoveEvent* event);
void QPushButton_ResizeEvent(QPushButton* self, QResizeEvent* event);
void QPushButton_OnResizeEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperResizeEvent(QPushButton* self, QResizeEvent* event);
void QPushButton_CloseEvent(QPushButton* self, QCloseEvent* event);
void QPushButton_OnCloseEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperCloseEvent(QPushButton* self, QCloseEvent* event);
void QPushButton_ContextMenuEvent(QPushButton* self, QContextMenuEvent* event);
void QPushButton_OnContextMenuEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperContextMenuEvent(QPushButton* self, QContextMenuEvent* event);
void QPushButton_TabletEvent(QPushButton* self, QTabletEvent* event);
void QPushButton_OnTabletEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperTabletEvent(QPushButton* self, QTabletEvent* event);
void QPushButton_ActionEvent(QPushButton* self, QActionEvent* event);
void QPushButton_OnActionEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperActionEvent(QPushButton* self, QActionEvent* event);
void QPushButton_DragEnterEvent(QPushButton* self, QDragEnterEvent* event);
void QPushButton_OnDragEnterEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperDragEnterEvent(QPushButton* self, QDragEnterEvent* event);
void QPushButton_DragMoveEvent(QPushButton* self, QDragMoveEvent* event);
void QPushButton_OnDragMoveEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperDragMoveEvent(QPushButton* self, QDragMoveEvent* event);
void QPushButton_DragLeaveEvent(QPushButton* self, QDragLeaveEvent* event);
void QPushButton_OnDragLeaveEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperDragLeaveEvent(QPushButton* self, QDragLeaveEvent* event);
void QPushButton_DropEvent(QPushButton* self, QDropEvent* event);
void QPushButton_OnDropEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperDropEvent(QPushButton* self, QDropEvent* event);
void QPushButton_ShowEvent(QPushButton* self, QShowEvent* event);
void QPushButton_OnShowEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperShowEvent(QPushButton* self, QShowEvent* event);
void QPushButton_HideEvent(QPushButton* self, QHideEvent* event);
void QPushButton_OnHideEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperHideEvent(QPushButton* self, QHideEvent* event);
bool QPushButton_NativeEvent(QPushButton* self, const libqt_string eventType, void* message, intptr_t* result);
void QPushButton_OnNativeEvent(QPushButton* self, intptr_t slot);
bool QPushButton_SuperNativeEvent(QPushButton* self, const libqt_string eventType, void* message, intptr_t* result);
int QPushButton_Metric(const QPushButton* self, int param1);
void QPushButton_OnMetric(const QPushButton* self, intptr_t slot);
int QPushButton_SuperMetric(const QPushButton* self, int param1);
void QPushButton_InitPainter(const QPushButton* self, QPainter* painter);
void QPushButton_OnInitPainter(const QPushButton* self, intptr_t slot);
void QPushButton_SuperInitPainter(const QPushButton* self, QPainter* painter);
QPaintDevice* QPushButton_Redirected(const QPushButton* self, QPoint* offset);
void QPushButton_OnRedirected(const QPushButton* self, intptr_t slot);
QPaintDevice* QPushButton_SuperRedirected(const QPushButton* self, QPoint* offset);
QPainter* QPushButton_SharedPainter(const QPushButton* self);
void QPushButton_OnSharedPainter(const QPushButton* self, intptr_t slot);
QPainter* QPushButton_SuperSharedPainter(const QPushButton* self);
void QPushButton_InputMethodEvent(QPushButton* self, QInputMethodEvent* param1);
void QPushButton_OnInputMethodEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperInputMethodEvent(QPushButton* self, QInputMethodEvent* param1);
QVariant* QPushButton_InputMethodQuery(const QPushButton* self, int param1);
void QPushButton_OnInputMethodQuery(const QPushButton* self, intptr_t slot);
QVariant* QPushButton_SuperInputMethodQuery(const QPushButton* self, int param1);
bool QPushButton_FocusNextPrevChild(QPushButton* self, bool next);
void QPushButton_OnFocusNextPrevChild(QPushButton* self, intptr_t slot);
bool QPushButton_SuperFocusNextPrevChild(QPushButton* self, bool next);
bool QPushButton_EventFilter(QPushButton* self, QObject* watched, QEvent* event);
void QPushButton_OnEventFilter(QPushButton* self, intptr_t slot);
bool QPushButton_SuperEventFilter(QPushButton* self, QObject* watched, QEvent* event);
void QPushButton_ChildEvent(QPushButton* self, QChildEvent* event);
void QPushButton_OnChildEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperChildEvent(QPushButton* self, QChildEvent* event);
void QPushButton_CustomEvent(QPushButton* self, QEvent* event);
void QPushButton_OnCustomEvent(QPushButton* self, intptr_t slot);
void QPushButton_SuperCustomEvent(QPushButton* self, QEvent* event);
void QPushButton_ConnectNotify(QPushButton* self, const QMetaMethod* signal);
void QPushButton_OnConnectNotify(QPushButton* self, intptr_t slot);
void QPushButton_SuperConnectNotify(QPushButton* self, const QMetaMethod* signal);
void QPushButton_DisconnectNotify(QPushButton* self, const QMetaMethod* signal);
void QPushButton_OnDisconnectNotify(QPushButton* self, intptr_t slot);
void QPushButton_SuperDisconnectNotify(QPushButton* self, const QMetaMethod* signal);
void QPushButton_UpdateMicroFocus(QPushButton* self);
void QPushButton_OnUpdateMicroFocus(QPushButton* self, intptr_t slot);
void QPushButton_SuperUpdateMicroFocus(QPushButton* self);
void QPushButton_Create(QPushButton* self);
void QPushButton_OnCreate(QPushButton* self, intptr_t slot);
void QPushButton_SuperCreate(QPushButton* self);
void QPushButton_Destroy(QPushButton* self);
void QPushButton_OnDestroy(QPushButton* self, intptr_t slot);
void QPushButton_SuperDestroy(QPushButton* self);
bool QPushButton_FocusNextChild(QPushButton* self);
void QPushButton_OnFocusNextChild(QPushButton* self, intptr_t slot);
bool QPushButton_SuperFocusNextChild(QPushButton* self);
bool QPushButton_FocusPreviousChild(QPushButton* self);
void QPushButton_OnFocusPreviousChild(QPushButton* self, intptr_t slot);
bool QPushButton_SuperFocusPreviousChild(QPushButton* self);
QObject* QPushButton_Sender(const QPushButton* self);
void QPushButton_OnSender(const QPushButton* self, intptr_t slot);
QObject* QPushButton_SuperSender(const QPushButton* self);
int QPushButton_SenderSignalIndex(const QPushButton* self);
void QPushButton_OnSenderSignalIndex(const QPushButton* self, intptr_t slot);
int QPushButton_SuperSenderSignalIndex(const QPushButton* self);
int QPushButton_Receivers(const QPushButton* self, const char* signal);
void QPushButton_OnReceivers(const QPushButton* self, intptr_t slot);
int QPushButton_SuperReceivers(const QPushButton* self, const char* signal);
bool QPushButton_IsSignalConnected(const QPushButton* self, const QMetaMethod* signal);
void QPushButton_OnIsSignalConnected(const QPushButton* self, intptr_t slot);
bool QPushButton_SuperIsSignalConnected(const QPushButton* self, const QMetaMethod* signal);
void QPushButton_Delete(QPushButton* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif